forcedotcom/src/objects/Command__c.object
<CustomObject>
    <fields>
        <fullName>CommandParameter__c</fullName>
        <label>Command Parameter</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Command__c</fullName>
        <label>Command</label>
        <picklist>
            <picklistValues>
                <fullName>Forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shutdown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramToRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program to Run</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Commands (Program to Run)</relationshipLabel>
        <relationshipName>ProgramsToRun</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Commands</relationshipLabel>
        <relationshipName>Commands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Robot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send to Robot</label>
        <referenceTo>Robot__c</referenceTo>
        <relationshipLabel>Executed Commands</relationshipLabel>
        <relationshipName>Commands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Command</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Robot__c</columns>
        <columns>Command__c</columns>
        <columns>CommandParameter__c</columns>
        <columns>ProgramToRun__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMD-{00000000}</displayFormat>
        <label>Command Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>